...
          icon: Icon(Icons.arrow_back_ios),
          color: Color(0xFF4C748B),
          onPressed: () {
            Navigator.push(context,
                MaterialPageRoute(builder: (context) => ChooseDeviceScreen()));
          },
          key: Key('back-btn-2'),
        ),
      ),
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Text(
              "How many cups would you like?",
              key: Key('textEntry2'),
              style: TextStyle(
                  fontFamily: 'Montserrat',
                  color: Color(0xFF4C748B),
                  fontSize: 18),
            ),
            Padding(padding: EdgeInsets.all(10)),
...
                decoration: BoxDecoration(
                  color: Colors.white,
                  borderRadius: BorderRadius.all(Radius.circular(10.0)),
                  border: Border.all(color: Color(0xFF4C748B), width: 1.75),
                ),
                child: TextField(
                  key: Key('input-cup-field'),
                  textAlign: TextAlign.center,
                  onChanged: checkInput,
                  controller: inputCupsText,
                ),
              ),
            ),
...
                decoration: BoxDecoration(
                  color:
                      continueAllowed ? Color(0xFF4C748B) : Color(0xFFE2E2E2),
                  borderRadius: BorderRadius.all(Radius.circular(30.0)),
                ),
                child: TextButton(
                  key: Key('contInput-btn'),
                  onPressed: continueAllowed
                      ? () {
                          numCups = int.parse(inputCupsText.text);
                          ozsWater =
                              CoffeeTools.cupsToOunces(numCups).toDouble();
                          gramsWater = CoffeeTools.ozToGrams(ozsWater);
...
                                      coffeeGnd,
                                      widget.device)));
                        }
                      : null,
                  child: Text(
                    "Continue",
                    key: Key('contInput-text'),
                    style: continueAllowed
                        ? TextStyle(
                            fontFamily: 'Montserrat',
                            fontSize: 14,
                            color: Color(0xFFFFFFFF),
                            letterSpacing: 2)
...
